fixed width overflow thing

--- a/src/assets/sass/partials/_header.scss
+++ b/src/assets/sass/partials/_header.scss
@@ -1,6 +1,6 @@
 .header {
-  width:100vw;
-  height:100vh;
+  width: 100%;
+  height: 100vh;
   overflow: hidden;
   background-color: $primary-colour;
   background-image: url('../images/overlay.png'), url('../images/pattern-size1.svg');
@@ -25,7 +25,7 @@
     color: #d1e5f9;
     font-weight: lighter;
     font-size: 1.5em;
-    padding:25px 0px 40px 0px;
+    padding: 25px 0px 40px 0px;
   }
 
   .header-full {
@@ -35,6 +35,7 @@
 
   .header-badge {
     padding-bottom: 1.5em;
+
     img {
       max-width: 50%;
       max-height: 50%;
